--- a/package.json
+++ b/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/insert-menu": "^1.0.18",
+    "@sanity/logos": "^2.1.13",
+    "@sanity/vision": "^3.68.3",
     "lucide-react": "^0.321.0",
-    "next": "14.1.0",
+    "next": "^15.1.3",
+    "next-sanity": "^9.8.31",
     "next-themes": "^0.2.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "styled-components": "^6.1.8"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "sanity": "^3.68.3",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
